<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Renovium</string>
    <string name="welcome_msg">Welcome to Renovium!</string>
    <string name="login">Login</string>
    <string name="start_game">Start game</string>
    <string name="replays">Watch replays</string>
    <string name="game_start_msg">Game is starting...</string>



    <string name="intro_text">English text</string>
    <string name="intro_avatar">Choose your avatar</string>
    <string name="intro_city">Choose a city</string>
    <string name="intro_start">Start game</string>
    <string name="back">Back button</string>
    <string name="cities_available">Cities available: %d</string>
    <string name="avatars_available">Avatars available: %d</string>
    <string name="game_started">Game started!</string>
    <string name="accion">Action!</string>
    <string name="puntos">Points: %d</string>
    <string name="guardar">Save</string>
    <string name="recycler_view_desc">List of saved games</string>
    <string name="historial_title">Game replays</string>
    <string name="game_screen_title">Game ongoing</string>



</resources>